# chat-conductor

./: .gitignore  README.md  pyproject.toml
src/chat_conductor/: __init__.py  adapters.py  cli.py  evaluator.py  export.py  indexer.py  models.py  rehearse.py  server.py  store.py  text.py  turns.py
tests/: test_eval.py  test_index_search.py  test_rehearse_server.py
